# embedkd

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCE.md  conftest.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: d1_cub200_cosine.yaml  d1_cub200_kl.yaml  d1_cub200_mse.yaml  d1_cub200_rkd.yaml  d1_cub200_teacher.yaml  d2_cars196_convnext_mobilenet.yaml  d3_sop_cosine.yaml  quickstart_cpu.yaml
docs/: faq.md  index.md
docs/concepts/: diagnostics.md  overview.md  protocols.md
docs/extend/: custom-dataset-adapter.md  custom-objective.md  custom-task-loss.md
docs/getting-started/: install.md  quickstart.md  tutorial.md
docs/guides/: bring-your-own-dataset.md  choosing-a-pair.md  configuration.md  deploy.md  reproduce.md
embedkd/: __init__.py  cli.py  config.py  registry.py  run.py
expected_results/: README.md  d1_cub200.json  d2_cars196.json  d3_sop.json  d4_epillid.json
scripts/: convert_cars196.py  fetch_release_checkpoints.py  make_d5_diagnostics.py  make_expected_results.py  make_qualitative_figure.py  run_d1_cub200.sh  server_setup.sh  verify_teacher_metrics.py
tests/: test_backbone_smoke.py  test_cli.py  test_config.py  test_convert_cars196.py  test_data.py  test_datasets_builtin.py  test_deploy.py  test_diagnostics.py  test_docs_examples.py  test_e2e_quickstart.py  test_engine_features.py  test_evaluation.py  test_head.py  test_losses.py  test_make_expected_results.py  test_no_internal_leaks.py  test_objectives.py  test_plots.py  test_registry.py  test_tutorial.py  test_validate.py  utils.py
(+25 files in other folders)
