[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embedkd"
version = "0.1.0.dev0"
description = "Reproducibility-first toolkit for knowledge distillation of metric embeddings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EmbedKD contributors" }]
keywords = ["knowledge-distillation", "metric-learning", "image-retrieval", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "timm>=1.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pillow>=9.0",
]

[project.optional-dependencies]
onnx = ["onnx>=1.15", "onnxruntime>=1.17"]
plots = ["matplotlib>=3.7"]
docs = ["mkdocs-material>=9.5"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "onnx>=1.15",
    "onnxruntime>=1.17",
]

[project.scripts]
embedkd = "embedkd.cli:main"

[project.urls]
Homepage = "https://github.com/embedkd/embedkd"
Documentation = "https://embedkd.readthedocs.io"

[tool.setuptools.packages.find]
include = ["embedkd*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: end-to-end tests that train a tiny model on CPU"]
